# py-tut

./: .env  .env.dev  .gitignore  README-oop.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
dsa/: README.md  stack.py
oop/: README.md  person.py  student.py  teacher.py
sql/: db-20251107_000810.sql  db-20251112_010449.sql  db.sql  user_role.sql  user_role_join.sql
src/: .gitignore
src/app/: helpers.py  models.py
src/app/db/: base.py  qb.py  sqlite.py
src/db/: sqlite.py
src/dsa/: .gitignore  README.md  bbst.py  bst.py  doubly.py  queue.py  singly.py
src/oop/: README.md  person.py  student.py  teacher.py  test.py
tests/dsa/: StackTest.py  test_doubly.py  test_queue.py  test_singly.py  test_stack.py
tests/oop/: test_person.py
